--- a/templates/resume/index.ejs
+++ b/templates/resume/index.ejs
@@ -26,7 +26,7 @@
     <div class="Grid Grid--gutters Grid--full u-textCenter positionFixed">
       <div class="Grid-cell">
         <div class="element ">
-          <a href="/resume/resume.pdf" target="_blank"> <button class="buttonFlip ">PDF Resume
+          <a href="/resume/resume.pdf" target="_blank"> <button class="buttonCTA buttonFlip ">PDF Resume
             </button></a>
           <!--buttonBlack-->
 
