--- a/templates/shared/block_banner.ejs
+++ b/templates/shared/block_banner.ejs
@@ -37,7 +37,7 @@
       <h2 class="ProjectBannerInnerElement"><strong><%= bannerTitle %></strong> </h2>
       <h3 class="Grid Grid--center colorBlack"><%= bannerSubTitle %></h3>
 
-      <a href="<%= SlideDeckUrl %>" target="_blank"> <button class="buttonFlipLarge <%= bannerButtonColor %>">Slide Deck</button></a>
+      <a href="<%= SlideDeckUrl %>" target="_blank"> <button class="buttonCTA buttonFlip <%= bannerButtonColor %>">Slide Deck</button></a>
     </div>
 
   </div>
@@ -51,7 +51,7 @@
       <h2><strong><%= bannerTitle %></strong> </h2>
       <h3 class="Grid Grid--center colorBlack"><%= bannerSubTitle %></h3>
 
-      <a href="<%= SlideDeckUrl %>" target="_blank"> <button class="buttonFlipLarge  <%= bannerButtonColor %>">Slide Deck</button></a>
+      <a href="<%= SlideDeckUrl %>" target="_blank"> <button class="buttonCTA buttonFlip  <%= bannerButtonColor %>">Slide Deck</button></a>
 
       <div class="blankHXS"></div>
     </div>
@@ -66,7 +66,7 @@
       <h2><strong><%= bannerTitle %></strong> </h2>
       <h3 class="Grid Grid--center colorBlack"><%= bannerSubTitle %></h3>
 
-      <a href="<%= SlideDeckUrl %>" target="_blank"> <button class="buttonFlipLarge <%= bannerButtonColor %>">Slide Deck</button></a>
+      <a href="<%= SlideDeckUrl %>" target="_blank"> <button class="buttonCTA buttonFlip <%= bannerButtonColor %>">Slide Deck</button></a>
 
       <div class="blankHXS"></div>
     </div>
