--- a/templates/byp_b2b_SaaS/index.ejs
+++ b/templates/byp_b2b_SaaS/index.ejs
@@ -603,7 +603,7 @@ pageURL:'byp_b2b_SaaS', thumbnailImgURL: 'vickywang_web.png'
       <div class="Grid Grid--full Grid--gutters u-textCenter">
         <div class="Grid-cell">
           <div class="element">
-            <a href="https://www.figma.com/proto/2MrhSGMpQRH3kDJEzSHnUg/BYP---Business-facing-(2024-Current)?page-id=1906%3A6513&type=design&node-id=1912-6941&viewport=-1549%2C-2194%2C0.15&t=HPeYNIFq6Fpjo3Mm-1&scaling=scale-down&starting-point-node-id=1912%3A6941&show-proto-sidebar=1&mode=design" target="_blank"> <button class="buttonFlipLarge colorBgBYP">Slide Deck</button></a>
+            <a href="https://www.figma.com/proto/2MrhSGMpQRH3kDJEzSHnUg/BYP---Business-facing-(2024-Current)?page-id=1906%3A6513&type=design&node-id=1912-6941&viewport=-1549%2C-2194%2C0.15&t=HPeYNIFq6Fpjo3Mm-1&scaling=scale-down&starting-point-node-id=1912%3A6941&show-proto-sidebar=1&mode=design" target="_blank"> <button class="buttonCTA buttonFlip colorBgBYP">Slide Deck</button></a>
           </div>
         </div>
       </div>
