--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -20,53 +20,36 @@
 
   <div class="blankHM"></div>
   <div class="blankHXS"></div>
-
   <div class="wrapper">
-    <div class="Grid Grid--full Grid--gutters">
+    <div class="Grid Grid--full Grid--gutter u-textCenter">
       <div class="Grid-cell">
         <div class="element">
           <h1 class="t-hello">👋🏻 hello, I'm Vicky, a UX Designer</h1>
+          <h1 class="specialTextTitle">Passionate about creating</h1>
+          <h1 class="specialTextTitle displayTablet ">simple, smooth, engaging</h1>
+          <h1 class="specialTextTitle displayPhone">simple, smooth, engaging</h1>
+          <h1 class="specialTextTitle typing-demo">simple, smooth, engaging</h1>
+          <h1 class="specialTextTitle">experiences</h1>
 
+          </h1>
         </div>
       </div>
     </div>
   </div>
 
+
+
+  <div class="blankHXS"></div>
   <div class="wrapper">
-    <div class="Grid Grid--gutters">
-      <div class="Grid-cell">
-        <div class="row">
-          <div class="widthMax">
-            <div class="element">
-
-
-
-              <h1 class="specialTextTitle"> Passionate about creating <span class="">simple, smooth, engaging</span> experiences.
-
-              </h1>
-            </div>
-          </div>
-          <div class="paddingL fitContenteft displayLaptop">
-            <div class="element">
-              <div class="widthFitContent">
-                <div class="dropdownSM">
-                  <img title="Share" class="iconS hoverWhite paddingM fitContent borderRadiusMax dropbtn" src="/icon/share.svg" alt="Share">
-                  <div class="dropdownSM-content">
-                    <a href="https://www.linkedin.com/sharing/share-offsite/?url=https://vickywang.me" target="_blank">Share
-                      on LinkedIn</a>
-                    <a href="https://pinterest.com/pin/create/button/?url=https://vickywang.me&amp;media=https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang_mobile.svg&amp;description=Skilled%20UX%20Designer%20for%20B2B%20Solutions%20%26%20Consumer%20Apps%20-%20Vicky%20Wang" target="_blank">Share on Pinterest</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="blankHXS"></div>
 
     <div class="Grid Grid--gutters Grid--cols-8 ">
-      <div class="Grid-cell">
+      <div class="Grid-cell displayLaptop">
+      </div>
+      <div class="Grid-cell displayLaptop">
+      </div>
+      <div class="Grid-cell displayLaptop">
+      </div>
+      <div class="Grid-cell centerVH">
         <div class="ClipboardBoxIconOnly">
           <button class="ClipboardIconOnly">
             <img title="Copy Email to Clipboard" class="iconM hoverWhite paddingM fitContentax borderRadiusMax" src="./icon/mail.svg" alt="LinkedIn">
@@ -75,45 +58,47 @@
         </div>
 
       </div>
-      <div class="Grid-cell">
+      <div class="Grid-cell centerVH">
         <a href="https://www.linkedin.com/in/vicky-wyq/" target="_blank" title="LinkedIn">
           <img class="iconM hoverWhite paddingM fitContentax borderRadiusMax borderRadiusS" src="./icon/in.svg" alt="LinkedIn">
         </a>
       </div>
 
-      <div class="Grid-cell">
+      <div class="Grid-cell centerVH">
         <a href="https://github.com/vicky-wyq" target="_blank" title="GitHub">
           <img class="iconM hoverWhite paddingM fitContentax borderRadiusMax" src="./icon/git.svg" alt="GitHub">
         </a>
       </div>
-      <div class="Grid-cell">
+      <div class="Grid-cell centerVH">
         <a href="https://codepen.io/vicky-wyq" target="_blank" title="CodePen">
           <img class="iconM hoverWhite paddingM fitContentax borderRadiusMax" src="./icon/Codepen.svg" alt="CodePen">
         </a>
       </div>
-      <div class="Grid-cell">
+      <div class="Grid-cell displayLaptop">
+        <div class="dropdownSM">
+          <img title="Share" class="iconM hoverWhite paddingM fitContent borderRadiusMax dropbtn" src="/icon/share.svg" alt="Share">
+          <div class="dropdownSM-content">
+            <a href="https://www.linkedin.com/sharing/share-offsite/?url=https://vickywang.me" target="_blank">Share
+              on LinkedIn</a>
+            <a href="https://pinterest.com/pin/create/button/?url=https://vickywang.me&amp;media=https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang_mobile.svg&amp;description=Skilled%20UX%20Designer%20for%20B2B%20Solutions%20%26%20Consumer%20Apps%20-%20Vicky%20Wang" target="_blank">Share on Pinterest</a>
+          </div>
+        </div>
       </div>
-      <div class="Grid-cell">
+      <div class="Grid-cell displayLaptop">
       </div>
-      <div class="Grid-cell">
+
+      <div class="Grid-cell displayLaptop">
       </div>
-      <div class="Grid-cell">
+      <div class="Grid-cell displayLaptop">
       </div>
-      <div class="Grid-cell">
-      </div>
-      <div class="Grid-cell">
-      </div>
-      <div class="Grid-cell">
-      </div>
-      <div class="Grid-cell">
-      </div>
+
     </div>
 
   </div>
-  <div class="blankHXXS"></div>
+  <div class="blankHXS"></div>
 
   <div class="wrapper">
-    <div class="Grid Grid--gutters Grid--cols-3">
+    <div class="Grid Grid--gutters Grid--cols-2 Grid--center">
       <div class="element">
         <a href="/resume"> <button class="buttonCTA buttonLarge bgVWGrey">Resume
           </button></a>
