--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -26,9 +26,9 @@
         <div class="element">
           <h1 class="t-hello">👋🏻 hello, I'm Vicky, a UX Designer</h1>
           <h1 class="specialTextTitle">Passionate about creating</h1>
-          <h1 class="specialTextTitle displayTablet ">simple, smooth, engaging</h1>
-          <h1 class="specialTextTitle displayPhone">simple, smooth, engaging</h1>
-          <h1 class="specialTextTitle typing-demo">simple, smooth, engaging</h1>
+          <h1 class="specialTextTitle displayTablet colorLandingText">simple, smooth, engaging</h1>
+          <h1 class="specialTextTitle displayPhone colorLandingText">simple, smooth, engaging</h1>
+          <h1 class="specialTextTitle typing-demo colorLandingText">simple, smooth, engaging</h1>
           <h1 class="specialTextTitle">experiences</h1>
 
           </h1>
