--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -100,7 +100,7 @@
   <div class="wrapper">
     <div class="Grid Grid--gutters Grid--cols-2 Grid--center">
       <div class="element">
-        <a href="/resume"> <button class="buttonCTA buttonLarge bgVWGrey">Resume
+        <a href="/resume"> <button class="buttonCTA buttonLarge bgVWGrey">My resume
           </button></a>
       </div>
       <div class="element">
@@ -361,8 +361,8 @@
           <div class="Grid-cell">
             <div class="element">
               <div class="element">
-                <h2 data-aos="fade-up"> <strong> Understanding Users and Products</strong> </h2>
-                <h4>A deep understanding of both business goals and user needs is crucial in UX design. I leverage both qualitative and quantitative data to make informed decisions.
+                <h2 data-aos="fade-up"> <strong> Understand</strong> </h2>
+                <h4>Understand business goals and user needs using both qualitative and quantitative data to make informed UX decisions.
                 </h4>
               </div>
             </div>
@@ -373,8 +373,8 @@
           <div class="Grid-cell">
             <div class="element">
               <div class="element">
-                <h2 data-aos="fade-up"> <strong> Building Strong Cross-Functional Partnerships </strong> </h2>
-                <h4>I collaborate closely with cross-functional teams from research planning to product delivery. Continuous feedback loops help refine and enhance designs.
+                <h2 data-aos="fade-up"> <strong> Collaborate </strong> </h2>
+                <h4>Collaborate closely with teams from planning to delivery. Continuous feedback refines and improves designs.
                 </h4>
               </div>
             </div>
@@ -382,8 +382,8 @@
           <div class="Grid-cell">
             <div class="element">
               <div class="element">
-                <h2 data-aos="fade-up"> <strong> Managing the Design Process </strong> </h2>
-                <h4>Clear deadlines for each phase keep projects on track. Documenting and evaluating each iteration ensures the creation of impactful and effective designs.
+                <h2 data-aos="fade-up"> <strong> Facilitate</strong> </h2>
+                <h4>Manage the design process with clear deadlines to stay on track. Document and review each step to create effective, impactful designs.
                 </h4>
               </div>
 
