--- a/templates/byp_b2b_booking/index.ejs
+++ b/templates/byp_b2b_booking/index.ejs
@@ -124,6 +124,7 @@
           </div>
         </div>
         <div class="blankHXS"></div>
+        <div class="blankHXXS"></div>
 
         <div class="TBcarouselNav Grid-cell">
           <a class="TBsliderNav" aria-label="Go to slide 1" tabindex="0">
@@ -141,6 +142,8 @@
 
           </a>
         </div>
+        <div class="blankHXS"></div>
+
       </div>
     </div>
 
