--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -47,7 +47,7 @@
       </div>
       <div class="Grid-cell displayLaptop">
       </div>
-      <div class="Grid-cell displayLaptop">
+      <div class="Grid-cell displayTablet">
       </div>
       <div class="Grid-cell centerVH">
         <div class="ClipboardBoxIconOnly">
@@ -74,7 +74,7 @@
           <img class="iconM hoverWhite paddingM fitContentax borderRadiusMax" src="./icon/Codepen.svg" alt="CodePen">
         </a>
       </div>
-      <div class="Grid-cell displayLaptop">
+      <div class="Grid-cell centerVH displayLaptop">
         <div class="dropdownSM">
           <img title="Share" class="iconM hoverWhite paddingM fitContent borderRadiusMax dropbtn" src="/icon/share.svg" alt="Share">
           <div class="dropdownSM-content">
@@ -84,7 +84,7 @@
           </div>
         </div>
       </div>
-      <div class="Grid-cell displayLaptop">
+      <div class="Grid-cell displayTablet">
       </div>
 
       <div class="Grid-cell displayLaptop">
@@ -289,9 +289,17 @@
   </section>
 
   <section id="about">
-    <!-- Arrow -->
-    <%- include('shared/comp_textualElements_arrow', {message: 'About Me' }) %>
-    <!-- Arrow -->
+    <div class="wrapper">
+
+    <div class="Grid Grid--full Grid--gutters u-textCenter">
+      <div class="Grid-cell">
+        <div class="element">
+          <h1 class="specialTextL"> About Me
+            <h2 class="marginXS"> Craft simple, user-focused designs that meet business goals </h2>
+        </div>
+      </div>
+    </div>
+    </div>
     <div class="blankHXS"></div>
 
     <div class="wrapper">
@@ -317,7 +325,8 @@
 
           <div class="row centerVer">
             <div class="element">
-              <a href="mailto:vickyw.design@gmail.com"> <button class="buttonCTA buttonFlip bgVWGrey">Email me
+       
+              <a href="mailto:vickyw.design@gmail.com"> <button class="buttonCTA buttonLarge bgVWGrey">Email me
                 </button></a>
 
             </div>
@@ -345,7 +354,9 @@
 
     <div class="colorBgYellowVW">
 
-      <div class="wrapper">
+      <div class="wrapper">    
+        <div class="blankHS"></div>
+
         <div class="Grid Grid--full Grid--gutters u-textCenter">
           <div class="Grid-cell">
             <div class="element">
