--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -289,21 +289,65 @@
   </section>
 
   <section id="about">
-    <div class="wrapper">
+    <div class="wrapper displayPhone">
 
-    <div class="Grid Grid--full Grid--gutters u-textCenter">
-      <div class="Grid-cell">
-        <div class="element">
-          <h1 class="specialTextL"> About Me
-            <h2 class="marginXS"> Craft simple, user-focused designs that meet business goals </h2>
+      <div id="circle_wrapper">
+        <div id="circle_container">
+          <div id="circle">
+            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="200px" height="200px" viewBox="0 0 200 200" enable-background="new 0 0 200 200" xml:space="preserve">
+              <defs>
+                <path id="circlePath" d="M 100, 100 m -40, 0 a 40,40 0 0,1 80,0 a 40,40 0 0,1 -80,0 " />
+              </defs>
+              <circle cx="100" cy="66.67" r="50" fill="none" />
+              <g>
+                <use xlink:href="#circlePath" fill="none" />
+                <text>
+                  <textPath xlink:href="#circlePath">User Experience Designer, Product Designer</textPath>
+                </text>
+              </g>
+            </svg>
+          </div>
+        </div>
+      </div>
+
+    </div>
+    <div class="wrapper displayLaptop">
+
+      <div id="circle_wrapper">
+        <div id="circle_container">
+          <div id="circle">
+            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="200px" height="200px" viewBox="0 0 200 200" enable-background="new 0 0 200 200" xml:space="preserve">
+              <defs>
+                <path id="circlePath" d="M 100, 100 m -40, 0 a 40,40 0 0,1 80,0 a 40,40 0 0,1 -80,0 " />
+              </defs>
+              <circle cx="100" cy="66.67" r="50" fill="none" />
+              <g>
+                <use xlink:href="#circlePath" fill="none" />
+                <text>
+                  <textPath xlink:href="#circlePath">User Experience Designer, Product Designer</textPath>
+                </text>
+              </g>
+            </svg>
+          </div>
+        </div>
+      </div>
+
+    </div>
+    <div class="wrapper">
+      <div class="Grid Grid--full Grid--gutters u-textCenter">
+        <div class="Grid-cell">
+          <div class="element">
+            <h1 class="specialTextL"> About Me
+              <h2 class="specialTextS colorLandingText"> I craft simple, user-focused designs that meet business goals. </h2>
+          </div>
         </div>
       </div>
     </div>
-    </div>
     <div class="blankHXS"></div>
 
+
     <div class="wrapper">
-      <div class="Grid Grid--gutters Grid--1of3 Grid--top">
+      <div class="Grid Grid--gutters Grid--1of3 Grid--center">
 
 
         <div class="Grid-cell">
@@ -314,18 +358,43 @@
         </div>
         <div class="Grid-cell">
           <div class="element">
-            <h3>As a UX designer, I possess a diverse range of skills and have gained experience in startup environments. I am fully involved in every aspect of the design process and continuously aim to create seamless user experiences that align with business objectives. My approach emphasizes simplicity, using the fewest design elements necessary to address core issues effectively.
+            <h3 class="fontWeight400">Startup Experience
             </h3>
-            <h3>My fascination with craftsmanship extends beyond just UX. It is evident both in the art of crafting user-centric interfaces and in appreciating the finer details of everyday life.
+            <h4>As a UX designer with hands-on startup experience, I’m involved in every design stage. My focus is on creating effective, straightforward user experiences that align with business objectives.
+            </h4>
+            <h3 class="fontWeight400">Craftsmanship & Product Impact
+            </h3>
+            <h3>I’m driven by a passion for quality design, aiming to create products that not only look great but also achieve business success through thoughtful, user-centered details.
+            </h3>
+            <h3 class="fontWeight400">Embracing Technology
             </h3>
             <h3>
-              I take pleasure in immersing myself in new technologies. Doing so not only fosters smoother collaboration with developers but also deepens my understanding of design, ultimately driving productivity.
+              I enjoy diving into new technologies, which enhances collaboration with developers and refines my design process, leading to more innovative solutions.
             </h3>
           </div>
 
+
+        </div>
+
+      </div>
+
+
+
+
+      <div class="Grid Grid--gutters Grid--1of3 Grid--center">
+
+
+        <div class="Grid-cell">
+          <div class="element">
+
+          </div>
+        </div>
+        <div class="Grid-cell">
+
+
           <div class="row centerVer">
             <div class="element">
-       
+
               <a href="mailto:vickyw.design@gmail.com"> <button class="buttonCTA buttonLarge bgVWGrey">Email me
                 </button></a>
 
@@ -346,15 +415,13 @@
         </div>
 
       </div>
-
-
     </div>
     <div class="blankHS"></div>
 
 
     <div class="colorBgYellowVW">
 
-      <div class="wrapper">    
+      <div class="wrapper">
         <div class="blankHS"></div>
 
         <div class="Grid Grid--full Grid--gutters u-textCenter">
