--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -119,6 +119,76 @@
       }) %>
     <!-- Arrow -->
     <div class="blankHXS"></div>
+    <div class="wrapper">
+
+      <div class="Grid Grid--gutters Grid--holly-grail Grid--center">
+        <div class="Grid-cell main">
+          <div class="element">
+
+            <img src="/projectImages/Cover_byp_b2b_booking_new.svg" alt="Business Booking Experience">
+          </div>
+        </div>
+
+        <div class="Grid-cell aside aside-2">
+          <div class="element ">
+            <h1 class="specialTextL">Business Booking Experience</h1>
+
+            <h2 class="colorLandingText">Business owners managing appointments for their clients </h2>
+            <ul>
+
+              <li class="listCircle">Reduced average booking time from 5 minutes to 3.5 minutes, making the process 30% faster.
+              </li>
+              <li class="listCircle">
+                Decreased errors from 15 to 5 per 100 bookings, resulting in 67% fewer booking errors.
+
+              </li>
+
+            </ul>
+
+          </div>
+        </div>
+      </div>
+      <div class="blankHM"></div>
+      <div class="Grid Grid--gutters Grid--holly-grail  Grid--center">
+        <div class="Grid-cell main">
+          <div class="element">
+
+            <img src="/projectImages/Cover_byp_b2b_booking_new.svg" alt="Business Booking Experience">
+          </div>
+        </div>
+        <div class="Grid-cell aside aside-1">
+          <div class="element ">
+            <h1 class="specialTextL">Business Booking Experience</h1>
+
+            <h2 class="colorLandingText">Business owners managing appointments for their clients </h2>
+            <ul>
+
+              <li class="listCircle">Reduced average booking time from 5 minutes to 3.5 minutes, making the process 30% faster.
+              </li>
+              <li class="listCircle">
+                Decreased errors from 15 to 5 per 100 bookings, resulting in 67% fewer booking errors.
+
+              </li>
+
+            </ul>
+
+          </div>
+          <div class="element">
+            <a href="/byp_b2b_booking"> <button class="buttonCTA buttonLarge bgVWGrey">View Project
+              </button></a>
+          </div>
+        </div>
+
+      </div>
+
+    </div>
+
+    <div class="wrapper">
+
+
+
+    </div>
+    <div class="blankHS"></div>
 
     <div class="wrapper">
       <div class="Grid Grid--gutters Grid--cols-2">
@@ -289,7 +359,7 @@
   </section>
 
   <section id="about">
-    <div class="wrapper displayPhone">
+    <div class="wrapper ">
 
       <div id="circle_wrapper">
         <div id="circle_container">
@@ -311,28 +381,7 @@
       </div>
 
     </div>
-    <div class="wrapper displayLaptop">
 
-      <div id="circle_wrapper">
-        <div id="circle_container">
-          <div id="circle">
-            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="200px" height="200px" viewBox="0 0 200 200" enable-background="new 0 0 200 200" xml:space="preserve">
-              <defs>
-                <path id="circlePath" d="M 100, 100 m -40, 0 a 40,40 0 0,1 80,0 a 40,40 0 0,1 -80,0 " />
-              </defs>
-              <circle cx="100" cy="66.67" r="50" fill="none" />
-              <g>
-                <use xlink:href="#circlePath" fill="none" />
-                <text>
-                  <textPath xlink:href="#circlePath">User Experience Designer, Product Designer</textPath>
-                </text>
-              </g>
-            </svg>
-          </div>
-        </div>
-      </div>
-
-    </div>
     <div class="wrapper">
       <div class="Grid Grid--full Grid--gutters u-textCenter">
         <div class="Grid-cell">
@@ -440,8 +489,8 @@
             <div class="element">
               <div class="element">
                 <h2 data-aos="fade-up"> <strong> Understand</strong> </h2>
-                <h4>Understand business goals and user needs using both qualitative and quantitative data to make informed UX decisions.
-                </h4>
+                <h3>Understand business goals and user needs using both qualitative and quantitative data to make informed UX decisions.
+                </h3>
               </div>
             </div>
           </div>
@@ -452,8 +501,8 @@
             <div class="element">
               <div class="element">
                 <h2 data-aos="fade-up"> <strong> Collaborate </strong> </h2>
-                <h4>Collaborate closely with teams from planning to delivery. Continuous feedback refines and improves designs.
-                </h4>
+                <h3>Collaborate closely with teams from planning to delivery. Continuous feedback refines and improves designs.
+                </h3>
               </div>
             </div>
           </div>
@@ -461,8 +510,8 @@
             <div class="element">
               <div class="element">
                 <h2 data-aos="fade-up"> <strong> Facilitate</strong> </h2>
-                <h4>Manage the design process with clear deadlines to stay on track. Document and review each step to create effective, impactful designs.
-                </h4>
+                <h3>Manage the design process with clear deadlines to stay on track. Document and review each step to create effective, impactful designs.
+                </h3>
               </div>
 
             </div>
